--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Ninja YTG",
+  "name": "YTG Ninja",
   "description": "The feature everyone want on YTG",
   "action": {
     "default_popup": "popup.html",
@@ -12,8 +12,8 @@
   "content_scripts": [
     {
       "matches": [
-        "http://*/*",
-        "https://*/*",
+        "http://yourtext.guru/*",
+        "https://yourtext.guru/*",
         "<all_urls>"
       ],
       "js": [
