--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,9 +32,14 @@
       "resources": [
         "content.styles.css",
         "icon-128.png",
-        "icon-34.png"
+        "icon-34.png",
+        "logo.svg",
+        "arkee.png"
       ],
-      "matches": []
+      "matches": [
+        "http://yourtext.guru/*",
+        "https://yourtext.guru/*"
+      ]
     }
   ]
 }
