🔧 update manifest to use host_permissions instead of permissions

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,7 +9,7 @@
   "icons": {
     "128": "icon-128.png"
   },
-  "permissions": [
+  "host_permissions": [
     "http://yourtext.guru/*",
     "https://yourtext.guru/*"
   ],
